--- a/pom.xml
+++ b/pom.xml
@@ -107,7 +107,17 @@
                         </annotationProcessorPaths>
                     </configuration>
                 </plugin>
-            </plugins>
-        </pluginManagement>
-    </build>
+          <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <version>3.2.5</version>
+        <configuration>
+          <suiteXmlFiles>
+            <suiteXmlFile>testng.xml</suiteXmlFile>
+          </suiteXmlFiles>
+        </configuration>
+      </plugin>
+      </plugins>
+    </pluginManagement>
+  </build>
 </project>
